# edge-ad-bench

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: experiment.yaml
configs/dataset/: ims.yaml  ims_center.yaml
configs/deploy/: host.yaml
configs/eval/: default.yaml
configs/model/: elm.yaml  iforest.yaml
configs/train/: supervised.yaml
docs/: implementation_status.md  ims_center.md
src/bench/: calibrate.py  cli.py  eval_loop.py  registry.py  train_loop.py  utils_io.py  utils_metrics.py
src/bench/datasets/: base.py  ims.py  ims_center.py
src/bench/models/: base.py  elm.py  iforest.py
src/edge_ad_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
