[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-ad-bench"
version = "0.1.0"
description = "Config-driven benchmarking for lightweight anomaly detection."
requires-python = ">=3.8,<3.9"

dependencies = [
  "numpy",
  "scikit-learn==1.3.*",
  "hydra-core",
  "omegaconf",
  "mlflow==2.13.*"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
